[gd_scene load_steps=2 format=3 uid="uid://chtjwpe4jhua1"]

[ext_resource type="Script" uid="uid://usftt3ss2vbr" path="res://scripts/hurt_zone.gd" id="1_havby"]

[node name="HurtZone" type="Area2D"]
script = ExtResource("1_havby")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
